# pych

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  activate.sh  pych.code-workspace
cmake/: plugins.cmake  pych_coreConfig.cmake.in
cmake/external_build/: CMakeLists.txt
core/: CMakeLists.txt  core.cpp  core.h  core_defs.h  exprtk_wrapper.cpp  exprtk_wrapper.h  json_api.cpp  json_api.h  logger.h  record_variables.cpp  record_variables.h  tasking.cpp  tasking.h  type_utils.h
core/CoreRunner/: CoreRunner.cpp  CoreRunner.h
core/CoreScheduler/: CoreScheduler.cpp  CoreScheduler.h  tasking.cpp
core/plugin/: PluginService.cpp  PluginService.h
docker/: Dockerfile  build.xdockcross  create_aarch64.sh  create_x86_64.sh  init_docker.sh  run.xdockcross  x86_64_musl.Dockerfile  x86_64_musl.xdockcross
examples/ExoTao_esp32_encoders/: ExoTao_esp32_encoders.ino  abs_encoder.cpp  abs_encoder.h  inc_encoder.cpp  inc_encoder.h
gui/: main.py
matlab/: SimpleCurrentMode.m  SimplePD_1D.m  delsys.m  fes_force.m  fnc1.m  tcp_server.m  view_log.m
models/: ExoTaov1.json  ModeCurrent_EPOS2.json  ModeVelocity_EPOS2.json  ScienceMode3.json  ScienceMode3Scope.json  rpi_run.sh  run.sh
scripts/: build.sh  install.sh  remote.sh  rpi_all.sh  rpi_copy.sh  rpi_mount.sh  rpi_run.sh  rpi_tty.sh  run_docker_musl.sh  ssh_config.sh
scripts/can/: 99-canusb.rules  can_setup.sh  install.sh  vcan.sh
src/plugins/commIO/CANOpenIO/: CANOpenIO.cpp  CANOpenIO_defs.h  CMakeLists.txt
src/plugins/commIO/CANOpenIO/scripts/: can_init.sh  set_velocity.sh
src/plugins/commIO/SerialIO/: CMakeLists.txt  SerialIO.cpp  SerialIO_defs.h
src/plugins/controlIO/SimplePD/: CMakeLists.txt  SimplePD.cpp
src/plugins/controlIO/SimplePD_1D/: CMakeLists.txt  SimplePD_1D.cpp
src/plugins/deviceIO/ActuatorIO/: ActuatorIO.cpp  CMakeLists.txt
src/plugins/deviceIO/EPOS/: CMakeLists.txt  EPOS.cpp  EPOS_defs.h
src/plugins/deviceIO/SensorIO/: CMakeLists.txt  SensorIO.cpp
src/plugins_base/commIO/: commIO_interface.h
src/plugins_base/controlIO/: controlIO_interface.h
src/plugins_base/deviceIO/: deviceIO_interface.h
test/: CMakeLists.txt  json.json  json_obj.cpp  robot.json  testCanOpenIO.cpp  testCore.cpp  testEPOS.cpp  testPositionSensor.cpp  testSerial.cpp  testSerial.json
utils/: eval_struct.h  plugin_loader.h  utils_control.h
